--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1058,4 +1058,8 @@
         <item name="android:textColor">@color/text_dark</item>
     </style>
 
+    <style name="LoginButtonLogoutImageStyle">
+        <item name="android:padding">8dp</item>
+    </style>
+
 </resources>
