--- a/project/res/values-sw600dp/styles.xml
+++ b/project/res/values-sw600dp/styles.xml
@@ -40,4 +40,11 @@
         <item name="android:layout_marginRight">10dp</item>
     </style>
 
+    <style name="LoginButtonLogoutImageStyle">
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
+
 </resources>
