--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -34,4 +34,7 @@
     <!-- for using Id while running Expedia app, this is for the message shown on clearing private data-->
     <item name="dialog_message_logged_out_and_cleared_private_data_tvly" type="string"/>
 
+    <!-- adding tvly_hotel_error string id, to avoid errors in Expedia app compilation -->
+    <item name="e3_error_hotel_offers_hotel_service_failure_tvly" type="string"/>
+
  </resources>
