Change coupon message from yellow to travelocity blue.
Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D260

--- a/project/res/layout/fragment_booking_overview.xml
+++ b/project/res/layout/fragment_booking_overview.xml
@@ -227,7 +227,7 @@
                         android:layout_below="@+id/coupon_applied_text_view"
                         android:ellipsize="end"
                         android:singleLine="true"
-                        android:textColor="#FFE115"
+                        android:textColor="?attr/couponSuccessMessageColor"
                         android:textSize="16dp" />
                 </RelativeLayout>
 
