--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -341,5 +341,6 @@
     <attr name="tabletHotelImageGalleryPhotoBorder" format="reference"/>
 
     <attr name="hotelConfirmationPlaceholderDrawable" format="reference" />
+    <attr name="couponSuccessMessageColor" fomrat="reference|color"/>
 
 </resources>
