--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -255,6 +255,7 @@
         <item name="bgFindItineraryButton">@drawable/btn_find</item>
         <item name="tabletHotelImageGalleryPhotoBorder">@drawable/bg_gallery_photo</item>
         <item name="hotelConfirmationPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
+        <item name="couponSuccessMessageColor">@color/coupon_success_message_color</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
