Change coupon message from yellow to travelocity blue.
Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D260

(cherry picked from commit 805e3d158ff9480d19261a000b99a12398f19e66)

Conflicts:
	project/res/values/colors.xml
	project/res_travelocity/values/colors.xml

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -470,5 +470,6 @@
     <attr name="itinTabletCardPopupHeaderDrawable" format="reference"/>
 
     <attr name="hotelConfirmationPlaceholderDrawable" format="reference" />
+    <attr name="couponSuccessMessageColor" fomrat="reference|color"/>
 
 </resources>
