--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -153,6 +153,7 @@
         <item name="cvvEntryTitleText">@string/security_code_TEMPLATE</item>
         <item name="bgFindItineraryButton">@drawable/btn_find</item>
         <item name="hotelConfirmationPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
+        <item name="couponSuccessMessageColor">@color/coupon_success_message_color</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
