--- a/project/res/layout/fragment_tvly_launch.xml
+++ b/project/res/layout/fragment_tvly_launch.xml
@@ -84,7 +84,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_tvly_flights"
-                android:layout_gravity="bottom"/>
+                android:layout_gravity="bottom"
+                android:layout_marginRight="50dp"/>
 
             <ImageView
                 android:id="@+id/tvly_hotels"
