2606: Tablet Hotel map info windows
Now when you tap on a pin it opens a little window with a picture name
of the hotel price and rating.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -293,4 +293,8 @@
     <dimen name="trip_bucket_root_layout_padding_top">110dp</dimen>
     <dimen name="trip_bucket_empty_trip_container_padding_top">0dp</dimen>
 
+    <!-- Tablet hotel map popup dimens -->
+    <dimen name="tablet_hotel_map_popup_thumbnail_height">126dp</dimen>
+    <dimen name="tablet_hotel_map_popup_thumbnail_width">111dp</dimen>
+
 </resources>
