--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -224,4 +224,17 @@
         <item name="textStyle">normal</item>
     </style>
 
+    <!-- RatingBar styling -->
+
+    <style name="V2.Widget.RatingBar" />
+
+    <style name="V2.Widget.RatingBar.UserReview">
+        <item name="android:minHeight">10dp</item>
+        <item name="android:maxHeight">10dp</item>
+    </style>
+
+    <style name="V2.Widget.RatingBar.UserReview.Yellow">
+        <item name="android:progressDrawable">@drawable/ratingbar_userreview_flat_yellow</item>
+    </style>
+
 </resources>
