527 For Travelocity app setting textcolor for  GuestCount(in actionbar) to  white
Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D287

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -346,5 +346,6 @@
     <!-- Tablet Hotel Deal Left Ribbon-->
     <attr name="tabletRibbonSaleRateTextColor" format="reference"/>
     <attr name="tabletRibbonRateQualifierTextColor" format="reference"/>
+    <attr name="actionBarTabletGuestCountTextColor" format="reference"/>
 
 </resources>
