--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -36,6 +36,7 @@
         <!-- Tablet menu drawables -->
         <item name="actionBarTabletGuestsDrawable">@drawable/ic_action_guests</item>
         <item name="actionBarTabletDateDrawable">@drawable/ic_action_dates</item>
+        <item name="actionBarTabletGuestCountTextColor">@color/tabletGuestCountTextColor</item>
 
         <!-- Hotel details search calendar drawables -->
         <item name="calendarBackgroundCellDrawable">@drawable/bg_calendar_cell_tablet</item>
