--- a/project/res/layout/action_menu_item_guests.xml
+++ b/project/res/layout/action_menu_item_guests.xml
@@ -34,7 +34,7 @@
         android:shadowDx="0"
         android:shadowDy="-1"
         android:shadowRadius="0.1"
-        android:textColor="#505966"
+        android:textColor="?attr/actionBarTabletGuestCountTextColor"
         android:textSize="12dp"
         android:textStyle="bold"
         tools:ignore="SpUsage" />
