Add a search error state to the hotels controller.
Sometimes our searches fail. We will now have a nice place to display error messages and such

--- a/project/res/layout/fragment_tablet_results_hotels.xml
+++ b/project/res/layout/fragment_tablet_results_hotels.xml
@@ -29,6 +29,11 @@
         android:layout_height="match_parent" />
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/column_one_hotel_search_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/column_three_hotel_filtered_count"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
