--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -414,6 +414,8 @@
     <string name="state_code_wy" tools:ignore="UnusedResources">WY</string>
     <string name="state_code_yt" tools:ignore="UnusedResources">YT</string>
 
+    <!-- For app launcher name -->
+    <string name="launcher_name">@string/app_name</string>
     <!-- Non-localized content descriptions (Automation) -->
     <string name="cd_top_flight_calendar">Top of flight calendar</string>
     <string name="cd_hotel_calendar_header">Top of hotel calendar</string>
