--- a/project/res/xml/expedia_authenticator.xml
+++ b/project/res/xml/expedia_authenticator.xml
@@ -1,5 +1,5 @@
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="@string/expedia_account_type_identifier"
     android:icon="@drawable/ic_launcher"
-    android:label="@string/app_name"
+    android:label="@string/launcher_name"
     android:smallIcon="@drawable/ic_launcher" />
