433 Fix app name issue for different language settings.
Summary: App name was getting overridden as Expedia on changing language settings.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D302

--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -428,4 +428,7 @@
     <string name="state_code_wy" tools:ignore="UnusedResources">WY</string>
     <string name="state_code_yt" tools:ignore="UnusedResources">YT</string>
 
+    <!-- For app launcher name -->
+    <string name="launcher_name">@string/app_name</string>
+
 </resources>
