--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -29,22 +29,41 @@
             android:animateLayoutChanges="true"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/waypoint_edit_text"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="@dimen/tablet_search_header_height"
-                android:layout_weight="1"
-                android:textColor="@android:color/black"
-                android:focusableInTouchMode="false"
-                android:hint="@string/search_all_hint"
                 android:background="@drawable/bg_tablet_search_header"
-                android:paddingLeft="16dp"
-                android:drawableLeft="@drawable/ic_searchbox"
-                android:drawablePadding="8dp"
-                android:inputType="textNoSuggestions"
-                android:imeOptions="actionSearch"
-                android:singleLine="true"
-                android:textSize="18dp" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/waypoint_edit_text"
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@android:color/black"
+                    android:focusableInTouchMode="false"
+                    android:hint="@string/search_all_hint"
+                    android:background="@null"
+                    android:paddingLeft="16dp"
+                    android:drawableLeft="@drawable/ic_searchbox"
+                    android:drawablePadding="8dp"
+                    android:inputType="textNoSuggestions"
+                    android:imeOptions="actionSearch"
+                    android:singleLine="true"
+                    android:textSize="18dp" />
+
+                <ImageView
+                    android:id="@+id/clear_waypoint_text"
+                    android:layout_weight="0"
+                    android:padding="12dp"
+                    android:scaleType="centerCrop"
+                    android:layout_width="@dimen/tablet_search_header_height"
+                    android:layout_height="@dimen/tablet_search_header_height"
+                    android:src="@drawable/ic_clear_edittext" />
+
+            </LinearLayout>
 
             <ProgressBar
                 android:id="@+id/location_loading_progress"
